<resources>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="ga_trackingId">UA-17974252-7</string>
    <string name="app_name">Citi Bike</string>
    <string name="bikes_label">Bikes</string>
    <string name="docks_label">Docks</string>
    <string name="calculating">Calculating</string>
    <string name="continue_button">Continue</string>
    <string name="default_timer">00:00</string>
    <string name="default_value">00</string>
    <string name="default_distance">0.0</string>
    <string name="distance_miles">mi</string>
    <string name="distance_kilometer">km</string>
    <string name="inactive">Station Inactive</string>
    <string name="label">Label</string>
    <string name="dropped_pin">Loading…</string>
    <string name="toast_icon_desc">Toast Message</string>
    <string name="main_container_menu_timer">Timer</string>
    <string name="main_container_menu_search">Search</string>
    <string name="menu_map">Map</string>
    <string name="menu_stations">Stations</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_safety">Riding Tips</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_more">Get Started</string>
    <string name="file_station">station.json</string>
    <string name="file_branch">branch.json</string>
    <string name="file_helmet">helmet.json</string>
    <string name="file_scoop">scoop.json</string>
    <string name="main_map_buttons_clear_desc">Clear</string>
    <string name="main_map_buttons_layers_desc">Layers</string>
    <string name="main_map_buttons_current_location_desc">Current Locaiton</string>
    <string name="main_exit_dialog_button">Quit</string>
    <string name="safety_bike_smart_downloads">Download &lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure.pdf>Bike Smart in English&lt;/a>&lt;br />&lt;br />Also available in:&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_haitian.pdf>Haitian Creole (Kreyòl Ayisyen)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_italian.pdf>Italian (italiano)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_korean.pdf>Korean (한국어판)&lt;/a>&lt;br />&lt;br /> &lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_mandarin.pdf>Chinese (中文版)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_russian.pdf>Russian (русском языке)&lt;/a>&lt;br />&lt;br />&lt;a href=http://www.nyc.gov/html/dot/downloads/pdf/dot_bikesmart_brochure_spanish.pdf>Spanish (español)&lt;/a>&lt;br /></string>
    <string name="safety_bike_smart_expert">Want to talk to an expert about urban bike riding? Visit &lt;a href=http://www.citibikenyc.com/>www.citibikenyc.com&lt;/a> for information on free city cycling classes held frequently throughout NYC.</string>
    <string name="how_unlock_title">How It Works: Unlock</string>
    <string name="how_unlock_h1">Unlock From Any Station</string>
    <string name="how_unlock_h2">You must be 16 years old or older to ride a Citi Bike.</string>
    <string name="how_unlock_h3">Get Started</string>
    <string name="how_unlock_h4">Unlock a Bike</string>
    <string name="how_unlock_h5">Adjust for Fit</string>
    <string name="how_unlock_p1">Purchase a 24-Hour or a 7-Day Pass. Passes are available for purchase by credit or debit card from any Citi Bike station. A $101 security hold will be placed on your card for every pass you purchase. Frequent rider? Join Citi Bike by signing up online for an Annual Membership!</string>
    <string name="how_unlock_p2">24-Hour and 7-Day Pass holders are provided with a ride code. Type the code into the key pad on a dock with an available bike. Annual Members simply dip their own key into the key slot at any dock with an available bike.</string>
    <string name="how_unlock_p3">Citi Bike seats are adjustable to fit a wide range of rider heights. Throw your bag into the front basket, strap it down and you’re ready to go!</string>
    <string name="layers_title">Show on Map:</string>
    <string name="layers_bike_lanes_btn">Bike Lanes</string>
    <string name="layers_citi_branches_btn">Citi Branches</string>
    <string name="layers_bike_helmets_btn">Bike Shops</string>
    <string name="layers_restaurants_btn">Restaurants</string>
    <string name="layers_coffee_btn">Coffee</string>
    <string name="layers_done_btn">Done</string>
    <string name="map_overlay_directions_to_here">Directions to Here</string>
    <string name="map_overlay_directions_from_here">Directions from Here</string>
    <string name="map_overlay_address">Address</string>
    <string name="map_overlay_favorite">Favorite</string>
    <string name="map_overlay_share">Share</string>
    <string name="pricing_overtime_fees_label">Overtime Fees</string>
    <string name="pricing_no_extra">No extra charge</string>
    <string name="pricing_timer_reset_message">(Timer resets when you dock one bike and take another)</string>
    <string name="pricing_24_7_p1">Overtime fees are charged for trips longer than 30 minutes. It’s an additional $4 for the second half hour, $9 for the third and $12 for every half hour after that.</string>
    <string name="pricing_24_7_p2">That adds up quickly, so keep an eye on the clock and bring your bike back to any station when you get close to the end of your initial rental period. Find more details on overtime fees on &lt;a href=http://citibikenyc.com/pricing>citibikenyc.com/pricing&lt;/a>.</string>
    <string name="pricing_24_7_header">Pricing: 24-Hour &amp; 7-Day</string>
    <string name="pricing_24_hour">24-Hour</string>
    <string name="pricing_24_hour_price">$9.95</string>
    <string name="pricing_7_hour">7-Day</string>
    <string name="pricing_7_hour_price">$25.00</string>
    <string name="pricing_24_7_line1">Unlimited 30-minute trips:</string>
    <string name="safety_bike_smart_title">Bike Smart</string>
    <string name="safety_bike_smart_h1">Bike Smart</string>
    <string name="safety_bike_smart_p1">Bike Smart: The Official Guide to Cycling in New York City, provides information on how to make your ride safer and easier, including tips on using newer bike facilities such as protected lanes and bike boxes.</string>
    <string name="safety_preride_check_title">Do A Pre-Ride Check</string>
    <string name="safety_preride_check_h2">Seat Height</string>
    <string name="safety_preride_check_h3">Air</string>
    <string name="safety_preride_check_h4">Wheel Spin</string>
    <string name="safety_preride_check_h5">Tires</string>
    <string name="safety_preride_check_h6">Brakes</string>
    <string name="safety_preride_check_p1">NYC Bike Share maintains every bike to help ensure they are in good condition and working properly. It’s always a good idea to give the bike a look over before starting a ride.</string>
    <string name="safety_preride_check_p2">If a bike isn’t working properly, lock it back into any Citi Bike dock, press the wrench button on the dock and unlock a different bike.</string>
    <string name="safety_preride_check_p3">Check the following before you set off:</string>
    <string name="safety_preride_check_p4">Citi Bike seats are easily adjustable. Just release the clamp on the side of the seat post, raise or lower the seat to your preferred height, align the black line in the center and re-tighten the clamp. Make sure the clamp is tight and the seat can’t twist or sink. Typically, a seat is at the right height when you can almost fully straighten your legs when pedaling.</string>
    <string name="safety_preride_check_p5">Push each tire hard against a curb or the ground. If you can flatten it, it needs air.</string>
    <string name="safety_preride_check_p6">Lift each wheel up and give it a slow spin (spin the back wheel forward so the pedals don’t move). Check that the wheel spins freely and doesn’t rub against the brake pads or anything else.</string>
    <string name="safety_preride_check_p7">Turn each wheel slowly and look for cuts, bulges or bubbles in the tire.</string>
    <string name="safety_preride_check_p8">Squeeze both brake levers to check that brakes are functional and feel strong.</string>
    <string name="safety_report_problem_title">Report Problems</string>
    <string name="safety_report_problem_p1">If you are involved in a crash and anyone is injured, contact 911 immediately. File a police report at the nearest NYPD precinct and contact Citi Bike at &lt;a href=tel:+1-855-245-3311>855-BIKE-311 (855-245-3311)&lt;/a>.</string>
    <string name="safety_report_problem_p2">If your bike is not working properly, lock the bike into any available dock, press the wrench button on top of the dock, and take a new bike.</string>
    <string name="safety_report_problem_p3">In the case of a lost or stolen Citi Bike key or bike, contact Citi Bike at &lt;a href=tel:+1-855-245-3311>855-BIKE-311 (855-245-3311)&lt;/a></string>
    <string name="stations_row_desc">Station</string>
    <string name="timer_alarm_label">Alarm set for:</string>
    <string name="timer_default_settings">25 Mins</string>
    <string name="timer_message">Keep Track of Time Limit</string>
    <string name="timer_start_btn">Start</string>
    <string name="timer_stop_btn">Stop</string>
    <string name="timer_reset_btn">Reset</string>
    <string name="timer_alarm_desc">Alarm</string>
</resources>