<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MoreContainer">
        <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_title" style="@style/MoreTitle" />
        <LinearLayout style="@style/MoreMain">
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p1" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p2" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p3" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_h2" style="@style/MoreH2" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p4" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_h3" style="@style/MoreH2" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p5" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_h4" style="@style/MoreH2" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p6" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_h5" style="@style/MoreH2" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p7" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_h6" style="@style/MoreH2" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/safety_preride_check_p8" style="@style/MorePlast" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>