<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/MoreContainer">
        <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_24_7_header" style="@style/MoreTitle" />
        <LinearLayout style="@style/MoreMain">
            <LinearLayout style="@style/MoreRow">
                <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_24_hour" style="@style/MoreRowLeftH1" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_24_hour_price" style="@style/MoreRowRightH3" />
            </LinearLayout>
            <View style="@style/MoreDivider" />
            <LinearLayout style="@style/MoreRow">
                <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_7_hour" style="@style/MoreRowLeftH1" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_7_hour_price" style="@style/MoreRowRightH3" />
            </LinearLayout>
            <View style="@style/MoreDivider" />
            <LinearLayout style="@style/MoreHighlightBox">
                <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_24_7_line1" style="@style/MoreH2" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_no_extra" style="@style/MoreH3" />
                <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_timer_reset_message" style="@style/MoreP" />
            </LinearLayout>
            <View style="@style/MoreDivider" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_overtime_fees_label" style="@style/MoreH2" />
            <com.citibikenyc.citibike.helpers.FontableTextView android:text="@string/pricing_24_7_p1" style="@style/MoreP" />
            <com.citibikenyc.citibike.helpers.RichTextView android:text="@string/pricing_24_7_p2" style="@style/MorePlast" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>