<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/timer_container" android:background="#fffafafa" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff424242" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="2.0dip" android:text="@string/timer_message" />
        <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="120.0sp" android:textColor="#ffcccccc" android:layout_gravity="center_horizontal" android:id="@id/largeTimerDisplay" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginBottom="32.0dip" android:bufferType="spannable" android:text="@string/default_timer" />
    </LinearLayout>
    <View style="@style/TimerDividerDark" />
    <View style="@style/TimerDividerLight" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="17.0dip" android:paddingRight="17.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="86.0dip">
        <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="18.0sp" android:textColor="#ff424242" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/timer_alarm_label" />
        <com.citibikenyc.citibike.helpers.FontableTextView android:textSize="18.0sp" android:textColor="#ff747474" android:gravity="right" android:id="@id/timerAlarmSetting" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:text="@string/timer_default_settings" android:layout_weight="1.0" />
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/timer_alarm" android:adjustViewBounds="true" android:contentDescription="@string/timer_alarm_desc" />
    </LinearLayout>
    <View style="@style/TimerDivider" />
    <RelativeLayout android:background="#fff2f2f2" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/timerStartButton" android:background="@drawable/timer_button_start" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/timer_start_btn" />
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/timerStopButton" android:background="@drawable/timer_button_stop" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/timer_stop_btn" />
        <Button android:textSize="20.0sp" android:textStyle="bold" android:textColor="#ff747474" android:id="@id/timerResetButton" android:background="@drawable/timer_button_reset" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/timer_reset_btn" />
    </RelativeLayout>
</LinearLayout>